// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateRegistration can create registration 1`] = `
Object {
  "data": Object {
    "claimRegistrationToken": "[id-1]",
  },
}
`;

exports[`CreateRegistration can create registration 3`] = `
Object {
  "data": Object {
    "createRegistration": Object {
      "registration": Object {
        "eventId": "[id-3]",
        "firstName": "Testname",
        "id": "[id-2]",
        "lastName": "Testlastname",
        "quotaId": "[id-4]",
      },
    },
  },
}
`;

exports[`CreateRegistration can't create registration if eventId is invalid 1`] = `
Object {
  "data": Object {
    "createRegistration": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "NTFND",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_registration(text,uuid,uuid,text,text,citext) line 18 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 10,
        },
      ],
      "message": "Event not found.",
      "path": Array [
        "createRegistration",
      ],
    },
  ],
}
`;

exports[`CreateRegistration can't create registration if quotaId is invalid 1`] = `
Object {
  "data": Object {
    "createRegistration": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "NTFND",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_registration(text,uuid,uuid,text,text,citext) line 14 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 10,
        },
      ],
      "message": "Quota not found.",
      "path": Array [
        "createRegistration",
      ],
    },
  ],
}
`;

exports[`CreateRegistration can't create registration if registration is not open 1`] = `
Object {
  "data": Object {
    "createRegistration": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_registration(text,uuid,uuid,text,text,citext) line 24 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 10,
        },
      ],
      "message": "Event registration is not open.",
      "path": Array [
        "createRegistration",
      ],
    },
  ],
}
`;

exports[`CreateRegistration can't create registration if registration token is for another event 1`] = `
Object {
  "data": Object {
    "createRegistration": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_registration(text,uuid,uuid,text,text,citext) line 37 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 10,
        },
      ],
      "message": "Registration token was not valid. Please reload the page.",
      "path": Array [
        "createRegistration",
      ],
    },
  ],
}
`;

exports[`CreateRegistration can't create registration if registration token is not valid 1`] = `
Object {
  "data": Object {
    "createRegistration": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "exception": Object {
          "code": "DNIED",
          "severity": "ERROR",
          "where": "PL/pgSQL function app_public.create_registration(text,uuid,uuid,text,text,citext) line 37 at RAISE",
        },
      },
      "locations": Array [
        Object {
          "column": 3,
          "line": 10,
        },
      ],
      "message": "Registration token was not valid. Please reload the page.",
      "path": Array [
        "createRegistration",
      ],
    },
  ],
}
`;
